CoreModules/LevelService/levelapi-k8s/levelapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: levelapi
  namespace: onaimhub
  labels:
    app: levelapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: levelapi
  template:
    metadata:
      labels:
        app: levelapi
    spec:
      containers:
        - name: levelapi
          image: gvgroup/onaim-levelservice:latest  
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /app/appsettings.json
              name: levelapi-cm0
              subPath: appsettings.json
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerhub-secret
      volumes:
        - configMap:
            items:
              - key: appsettings.json
                path: appsettings.json
            name: levelapi-cm0
          name: levelapi-cm0
