CoreModules/LevelService/levelapi-k8s/levelapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: levelapi
  namespace: onaimhub
spec:
  ports:
    - name: "5008"
      port: 5008
      targetPort: 8080
  selector:
    app: levelapi
  type: ClusterIP
