CoreModules/LevelService/levelapi-k8s/leveldb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leveldb
  namespace: onaimhub
spec:
  ports:
    - name: "5439"
      port: 5439
      targetPort: 5432
  selector:
    app: leveldb
