CoreModules/LevelService/levelapi-k8s/levelapi-ingerss.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: levelapi-ingress
  namespace: onaimhub
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Set to "true" if SSL is configured
spec:
  rules:
    - host: onaim.levelapi.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: levelapi
                port:
                  number: 5008
